--- a/src/pages/css/Miembros.css
+++ b/src/pages/css/Miembros.css
@@ -6,10 +6,7 @@
 }
 
 .container-miembros {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+    margin-top: 100px;
 }
 
 .accordion {
@@ -61,15 +58,17 @@
     font-size: 1.5rem;
 }
 
-.accordion-item__container {
-    padding: 1rem;
-}
 
 .accordion-item__container img {
     max-width: 100%;
     border-radius: 10px;
     margin-top: 1rem;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.4);
+}
+
+.acordion-info {
+    display: flex;
+    justify-content: space-around;
 }
 
 .albums {
@@ -108,4 +107,10 @@
     border-radius: 10px;
     margin: 1rem auto;
     display: block;
+}
+
+.album-tabs {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
