--- a/src/pages/css/Home.css
+++ b/src/pages/css/Home.css
@@ -26,7 +26,7 @@
 
 .mute-button {
   position: absolute;
-  top: 20px;
+  top: 90px;
   left: 20px;
   z-index: 2;
   background: rgba(0, 0, 0, 0.8);
@@ -92,23 +92,72 @@
   background-color: #202020;
   color: #fff;
   text-align: center;
+  background-image: url('https://images.kerrangcdn.com/images/BABYMETAL-2023-tour-video-header.png?auto=compress&fit=max&w=3840');
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+.info-coso {
+  background: rgba(255,255,255,0.05);
+-webkit-backdrop-filter: blur(9px);
+backdrop-filter: blur(9px);
+border: 1px solid rgba(255,255,255,0.025);
+width: 70%;
+padding: 40px 0;
+border-radius: 20px;
+}
+
+.timeline-section h1 {
+  font-size: 28px;
+  margin: 8px 0px;
+  text-align: center;
 }
 
 .timeline-section h2 {
-  font-size: 26px;
-  margin-bottom: 20px;
+  font-size: 20px;
   color: #fff;
+  margin: 0px 12px;
 }
 
 .timeline-section p {
   color: #fff;
-  font-size: 22px;
+  font-size: 18px;
 }
+.TitleWrapper-sc-13izrht-0 { 
+  font-size: 30px;
+  color: #fff;
+}
+
 
 .timeline-item {
   animation: fadeInUp 0.8s ease-in-out;
   transform-origin: bottom;
 }
+
+.scroll-top-button {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: #333;
+  color: white;
+  border: none;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  z-index: 1000;
+  opacity: 0.8;
+  transition: opacity 0.3s ease;
+}
+
+.scroll-top-button:hover {
+  opacity: 1;
+}
+
 
 @keyframes fadeInUp {
   from {
